# types-affine

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
affine/: __init__.pyi
affine-stubs/: __init__.pyi
tests/: test_affine.yml
